# qiansai

./: verbose
Modbus_f030/demo/: .mxproject  demo.ioc  verbose
Modbus_f030/demo/Core/Inc/: FreeRTOSConfig.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  usart.h
Modbus_f030/demo/Core/Src/: dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c  tim.c  usart.c
Modbus_f030/demo/Drivers/Module_driver/: uart_device.c  uart_device.h
Modbus_f030/demo/MDK-ARM/: .clangd  demo+demo.cbuild-run.yml  demo+demo.cbuild.yml  demo.cbuild-idx.yml  demo.cbuild-pack.yml  demo.cbuild-set.yml  demo.cproject.yml  demo.csolution.yml  demo.uvguix.27622  demo.uvguix.weido  demo.uvguix.weidongshan  demo.uvoptx  demo.uvprojx  demo_demo.sct  startup_stm32f030xc.lst  startup_stm32f030xc.s  verbose
Modbus_f030/demo/MDK-ARM/RTE/_demo/: RTE_Components.h
Modbus_f030/demo/MDK-ARM/demo/: adc.crf  adc.d  cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  demo.axf  demo.build_log.htm  demo.elf  demo.hex  demo.htm  demo.lnp  demo.map  demo_demo.dep  dma.crf  dma.d  errno.crf  errno.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  i2c.crf  i2c.d  iwdg.crf  iwdg.d  list.crf  list.d  main.crf  main.d  modbus-data.crf  modbus-data.d  modbus-st-rtu.crf  modbus-st-rtu.d  modbus.crf  modbus.d  (+65 more)
Modbus_f030/demo/MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Modbus_f030/demo/MDK-ARM/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Modbus_f030/demo/MDK-ARM/tmp/demo+demo/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
Modbus_f030/demo/MDK-ARM/tmp/demo+demo/src/demo+demo-stamp/: demo+demo-configure-.cmake  demo+demo-database-.cmake  demo+demo-source_dirinfo.txt
Modbus_f030/demo/MDK-ARM/tmp/demo+demo/tmp/: demo+demo-cfgcmd.txt  demo+demo-mkdirs.cmake
openMV/: V1.2.py
shangweiji/: .config  .config.old  .cproject  Kconfig  configuration.xml  rtconfig.h
shangweiji/board/lvgl/: lv_port_disp.c  lv_port_indev.c
shangweiji/board/lvgl/demo/: lv_demo.c
shangweiji/board/lvgl/demo/video/img/: file_icon.c
shangweiji/board/ports/: mnt.c
shangweiji/ra_gen/: hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
shangweiji/src/: hal_entry.c  use_common.h
zhongkong/: .config  .config.old  .cproject  .project  .secure_xml  Backup of project.ewp  Backup of project.ewt  Backup of template.ewp  Kconfig  README.md  README_zh.md  buildinfo.ipcf  buildinfo.json  configuration.xml  exclude_list.json  ozone_scons.jdebug  project.ewd  project.ewp  project.ewt  rtconfig.h  rtconfig.py  rzn_cfg.txt  verbose
zhongkong/board/: Kconfig
zhongkong/cmake/: GeneratedCfg.cmake  GeneratedSrc.cmake
zhongkong/rzn/board/rzn2l_rsk/: board_ethernet_phy.h
zhongkong/rzn_cfg/fsp_cfg/: r_rtc_cfg.h  r_wdt_cfg.h
zhongkong/rzn_gen/: bsp_clock_cfg.h  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
zhongkong/script/: fsp_xspi0_boot.icf
zhongkong/src/: hal_entry.c
zhongkong/src/dmaff/: app_serial_protocol.c  app_serial_protocol.h  dma_sender.c  dma_sender.h
zhongkong/user/: user.h
zhongkong/user/SuanFa/: control_algorithm.c  control_algorithm.h  user_ShelfControl.h
zhongkong/user/fire_control/: user_FireControl.c  user_FireControl.h
zhongkong/user/modbus_poll/: user_modbus.c  user_modbus.h
zhongkong/user/rtc/: user_rtc.c  user_rtc.h
zhongkong/user/shelf_control/: user_ShelfControl.c
zhongkong/user/wdt/: user_wdt.c  user_wdt.h
